# DubberAi

./: .dockerignore  .env.example  .gitignore  ExpoFFmpeg.podspec  README.md  docker-compose.yml  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  metadata.json  package.json  pnpm-lock.yaml
.cursor/rules/: dubbercut-mobile.mdc
.cursor/skills/dubbercut-mobile/: SKILL.md
apps/api/: .env.example  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: auth.ts  cache.ts  env.ts  index.ts  listen.ts  queue.ts  serialize.ts  storage.ts  store.ts
apps/api/src/routes/: ai.ts  auth.ts  jobs.ts  projects.ts  sounds.ts  uploads.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/scripts/: copy-core.mjs
apps/desktop/src/: App.tsx  desktop.d.ts
apps/mobile/: .gitignore  app.json  package.json
apps/mobile/src/libs/: api.ts  (+1 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.json
apps/web/src/: bootstrap.tsx  desktop.d.ts  index.css  main.tsx
docker/: api.Dockerfile  nginx.conf  web.Dockerfile  worker.Dockerfile
patches/: ffmpeg-expo@0.0.2.patch
railway/: README.md  ai-worker.railway.json  api.railway.json  export-worker.railway.json  render-worker.railway.json  web.railway.json
rust/: Cargo.toml  README.md
rust/crates/audio/: Cargo.toml
rust/crates/compositor/: Cargo.toml
rust/crates/compositor/src/: blend_mode.rs  compositor.rs  frame.rs  lib.rs  texture_pool.rs  texture_store.rs
rust/crates/effects/: Cargo.toml
rust/crates/gpu/: Cargo.toml
rust/crates/gpu/src/: context.rs  lib.rs
rust/crates/gpu/src/shaders/: blit.wgsl  fullscreen.wgsl
rust/crates/masks/: Cargo.toml
rust/crates/time/: Cargo.toml
rust/node/: Cargo.toml
rust/node/src/: node.rs
rust/wasm/: Cargo.toml  README.md
rust/wasm/src/: compositor.rs  effects.rs  gpu.rs  masks.rs  perf.rs  wasm.rs
scripts/: check-env.mjs  editor-dub-debug.mjs  editor-dub-debug2.mjs  editor-dub-smoke.mjs  editor-dub-transcribe-e2e.mjs  editor-e2e-export.mjs  editor-e2e.mjs  editor-e2e2.mjs  editor-e2e3.mjs  editor-smoke.mjs  make-test-video.mjs  smoke-api.mjs  test-video.webm
services/ai-worker/: package.json
services/ai-worker/src/: index.ts
services/export-worker/: package.json
services/export-worker/src/: index.ts
services/render-worker/: package.json  tsconfig.json
services/render-worker/src/: index.ts
(+622 files in other folders)
